<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Dashboard" />
    <item
        android:id="@+id/receipesFragment"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:title="Recettes" />

    <item
        android:id="@+id/alimentsFragment"
        android:icon="@drawable/ic_local_pizza_black_24dp"
        android:title="Aliments" />

    <item
        android:id="@+id/mealsFragment"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="Planning" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="Paramètres" />

</menu>